@@ -1,56 +1,88 @@
 package org.sopt.diary.service;
 
 import org.sopt.diary.api.dto.response.ErrorCode;
-import org.sopt.diary.api.exception.DiaryException;
+import org.sopt.diary.api.exception.GlobalException;
 import org.sopt.diary.domain.Diary;
+import org.sopt.diary.domain.entity.Category;
 import org.sopt.diary.domain.entity.DiaryEntity;
+import org.sopt.diary.domain.entity.SoptMember;
 import org.sopt.diary.domain.repository.DiaryRepository;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /*
 서비스를 처리하는 클래스
  */
 @Component
 public class DiaryService {
-    private static final int MAX_TITLE_LENGTH = 30;
-    private static final int MAX_CONTENT_LENGTH = 100;
     private final DiaryRepository diaryRepository;
 
     public DiaryService(DiaryRepository diaryRepository) {
         this.diaryRepository = diaryRepository;
     }
 
-    public Long createDiary(String title, String content) {
+    // 일기 작성
+    public Long createDiary(String title, String content, Category category, Boolean isPublic, SoptMember soptMember) {
+        // 제목 중복체크
         if (diaryRepository.existsByTitle(title)) {
-            throw new DiaryException(ErrorCode.INVALID_INPUT_TITLE_DUPLICATE);
+            throw new GlobalException(ErrorCode.INVALID_INPUT_TITLE_DUPLICATE);
         }
 
-        DiaryEntity savedDiary = diaryRepository.save(new DiaryEntity(title, content));
+        DiaryEntity savedDiary = diaryRepository.save(
+                new DiaryEntity(title, content, category, isPublic, soptMember)
+        );
         return savedDiary.getId();
     }
 
-
-    public List<Diary> getDiaries() {
+    // 일기 전체 조회
+    public List<Diary> getDiaries(Category category) {
         // 다이어리 목록을 조회하고 엔티티에서 도메인 모델로 변환
-        return diaryRepository.findTop10ByOrderByCreatedAtDesc().stream()
-                .map(entity -> new Diary(entity.getId(), entity.getTitle()))
-                .collect(Collectors.toList());
+        List<DiaryEntity> diaryEntities;
+        if(category == null){
+            diaryEntities = diaryRepository.findTop10ByIsPublicTrueOrderByCreatedAtDesc();
+        } else{
+            diaryEntities = diaryRepository.findTop10ByCategoryAndIsPublicTrueOrderByCreatedAtDesc(category);
+        }
+        return diaryEntities.stream()
+                .map(entity -> new Diary(entity.getId(), entity.getTitle(), entity.getCreatedAt(), entity.getNickname()))
+                .toList();
     }
 
+    // 특정 사용자의 일기 목록 조회
+    public List<Diary> getMyDiaries(SoptMember soptMember, Category category) {
+        // 다이어리 목록을 조회하고 엔티티에서 도메인 모델로 변환
+        List<DiaryEntity> diaryEntities;
+        if(category == null){
+            diaryEntities = diaryRepository.findTop10ByMemberOrderByCreatedAtDesc(soptMember);
+        } else{
+            diaryEntities = diaryRepository.findTop10ByCategoryAndMemberOrderByCreatedAtDesc(category, soptMember);
+        }
+        return diaryEntities.stream()
+                .map(entity -> new Diary(entity.getId(), entity.getTitle()))
+                .toList();
+    }
+
+    // 일기 상세 조회
     public Diary getDiaryDetailById(Long id) {
         // 다이어리 존재 여부 확인
         DiaryEntity diaryEntity = findDiaryOrThrow(id);
         return new Diary(
-                diaryEntity.getId(), diaryEntity.getTitle(), diaryEntity.getContent(), diaryEntity.getCreatedAt(), diaryEntity.getUpdatedAt()
+                diaryEntity.getId(), diaryEntity.getTitle(), diaryEntity.getContent(),
+                diaryEntity.getCreatedAt(), diaryEntity.getUpdatedAt(),
+                diaryEntity.getCategory(), diaryEntity.getNickname()
         );
     }
 
-    public Diary updateDiary(Long id, String title, String content) {
+    // 일기 수정
+    public Diary updateDiary(Long diaryId, String title, String content, SoptMember soptMember) {
         // 다이어리 존재 여부 확인
-        DiaryEntity diaryEntity = findDiaryOrThrow(id);
+        DiaryEntity diaryEntity = findDiaryOrThrow(diaryId);
+
+        // 작성자 확인
+        if (!diaryEntity.getNickname().equals(soptMember.getNickname())) {
+            throw new GlobalException(ErrorCode.UNAUTHORIZED_ACCESS);
+        }
 
         // 제목, 내용, 수정 시간 갱신
         diaryEntity.updateDiary(title, content);
@@ -61,6 +93,7 @@ public class DiaryService {
         return new Diary(updatedDiary.getId(), updatedDiary.getTitle(), updatedDiary.getContent(), updatedDiary.getCreatedAt(), updatedDiary.getUpdatedAt());
     }
 
+    // 일기 삭제
     public void deleteDiary(Long id) {
         // 다이어리 존재 여부 확인
         DiaryEntity diaryEntity = findDiaryOrThrow(id);
@@ -69,10 +102,10 @@ public class DiaryService {
         diaryRepository.delete(diaryEntity);
     }
 
+    // 다이어리 ID로 일기 조회
     private DiaryEntity findDiaryOrThrow(final Long diaryId) {
         return diaryRepository.findById(diaryId).orElseThrow(
-                        () -> new DiaryException(ErrorCode.INVALID_INPUT_VALUE)
-                );
-
+                () -> new GlobalException(ErrorCode.INVALID_INPUT_VALUE)
+        );
     }
 }
